--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
+    "mongoose": "^7.4.1",
     "next": "13.4.9",
+    "next-auth": "^4.22.3",
     "next-connect": "^1.0.0",
     "postcss": "8.4.25",
     "react": "18.2.0",
