--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "13.4.9",
     "next-auth": "^4.22.3",
     "next-connect": "^1.0.0",
+    "nodemailer": "^6.9.4",
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
