--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^3.1.12",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
@@ -25,6 +26,7 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-multi-select-component": "^4.3.4",
+    "react-pdf-tailwind": "^2.1.0",
     "tailwindcss": "3.3.2",
     "zustand": "^4.3.9"
   }
