--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.1",
     "next": "13.4.9",
     "next-auth": "^4.22.3",
@@ -28,6 +29,7 @@
     "react-multi-select-component": "^4.3.4",
     "react-pdf-tailwind": "^2.1.0",
     "tailwindcss": "3.3.2",
+    "uuid": "^9.0.0",
     "zustand": "^4.3.9"
   }
 }
