--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-hot-toast": "^2.4.1",
     "react-multi-select-component": "^4.3.4",
     "react-pdf-tailwind": "^2.1.0",
+    "stripe": "^12.16.0",
     "tailwindcss": "3.3.2",
     "uuid": "^9.0.0",
     "zustand": "^4.3.9"
