--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
+    "framer-motion": "^10.16.4",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.1",
     "next": "13.4.9",
